--- a/Alumn/Base.lproj/Main.storyboard
+++ b/Alumn/Base.lproj/Main.storyboard
@@ -264,10 +264,9 @@
             <objects>
                 <navigationController id="GjZ-IM-Xnx" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="8L1-hL-0FO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2Zf-BY-jRV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="2Zf-BY-jRV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.99137331169999998" green="1" blue="0.98767595029999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.32549019610000002" green="0.82352941180000006" blue="0.5450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
@@ -1580,9 +1579,10 @@
                                     <outlet property="delegate" destination="TvX-13-9aO" id="TWP-HF-DHd"/>
                                 </connections>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tOA-8L-je9">
+                            <navigationBar opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tOA-8L-je9">
                                 <frame key="frameInset" minY="14" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.32549019610000002" green="0.82352941180000006" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
                                     <navigationItem title="人脉" id="wVf-My-uxP"/>
                                 </items>
@@ -1692,10 +1692,10 @@
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="kbG-Hm-G9z">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="1000" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kbG-Hm-G9z" id="IFj-zZ-rFG">
-                                            <frame key="frameInset" width="320" height="43"/>
+                                            <frame key="frameInset" width="1000" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
